# graph-hopper

./: Dockerfile  LICENSE  README.md  config.yaml  main.py  pyproject.toml  pytest.ini
.github/workflows/: copilot-setup-steps.yml  docker.yml  tests.yml
erks/: config.py  models.py
erks/orchestrator/: in_memory.py  interface.py
erks/server/: mcp_server.py  wiring.py
erks/subagent/: confidence.py  ingestion.py  retriever.py  subagent.py  vector_store.py
spec/: 00-scope.md  01-mcp-server.md  02-orchestrator.md  03-subagent-ingestion.md  04-chunking-embedding.md  05-vector-index.md  06-knowledge-graph.md  07-retriever.md  08-confidence-scoring.md  09-multi-subagent-query.md  10-list-sources.md  11-testing-validation.md  12-deployment.md
src/: config.py  models.py
src/orchestrator/: in_memory.py  interface.py
src/server/: mcp_server.py  wiring.py
src/subagent/: retriever.py  subagent.py  vector_store.py
tests/fixtures/: ml_fundamentals.md  python_guide.md
tests/integration/: test_streamable_http_e2e.py
tests/unit/: test_chunking_embedding.py  test_confidence_scoring.py  test_config.py  test_golden_fixtures.py  test_mcp_tools.py  test_multi_subagent_query.py  test_orchestrator.py  test_retriever.py  test_vector_store.py  test_wiring.py
