[project]
name = "graph-hopper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anyio>=4.0.0",
    "faiss-cpu>=1.13.2",
    "fastembed>=0.7.4",
    "httpx>=0.24.0",
    "litellm>=1.82.0",
    "mcp[cli]>=1.2.0",
    "numpy>=2.4.2",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=7.0.0",
    "pyyaml>=6.0",
]
